# quich

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  quich.1
lib/: linenoise.c
src/: helper.c  helper.h  lexer.c  lexer.h  main.c  main.h  parser.c  parser.h  quich.c  quich.h  tokenizer.c  tokenizer.h  variable.c  variable.h
tests/: .travis.yml  main.c
